service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wimetrix-app-service
spec:
  selector:
    app: wimetrix-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080        # access via http://localhost:30080
  type: NodePort
