ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wimetrix-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: wimetrix.local        # change this to your domain or IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wimetrix-app-service
                port:
                  number: 80
